RESOLVED FIXED233602
Correct serialization error in _WKApplicationManifestIcon
https://bugs.webkit.org/show_bug.cgi?id=233602
Summary Correct serialization error in _WKApplicationManifestIcon
Brent Fulgham
Reported 2021-11-29 15:42:37 PST
In Bug 233350 I mistakenly set the NSSecureCoding classes for _WKApplicationManifestIcon's "purposes" property as an array of strings. However, this should be treated as an array of numbers.
Attachments
Patch (5.48 KB, patch)
2021-11-30 09:26 PST, Brent Fulgham
no flags
Patch for landing (5.47 KB, patch)
2021-11-30 10:45 PST, Brent Fulgham
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-29 15:43:10 PST
Brent Fulgham
Comment 2 2021-11-30 09:09:07 PST
To make matters worse, I was using an NSString to decode an NSURL, which obviously didn't work. I've added a test case to exercise this code.
Brent Fulgham
Comment 3 2021-11-30 09:26:14 PST
Devin Rousso
Comment 4 2021-11-30 10:27:42 PST
Comment on attachment 445427 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=445427&action=review r=me > Tools/TestWebKitAPI/Tests/WebKitCocoa/ApplicationManifest.mm:379 > + EXPECT_FALSE(error); NIT: `EXPECT_NULL`? > Tools/TestWebKitAPI/Tests/WebKitCocoa/ApplicationManifest.mm:382 > + EXPECT_FALSE(error); ditto (:379)
Brent Fulgham
Comment 5 2021-11-30 10:42:27 PST
Comment on attachment 445427 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=445427&action=review >> Tools/TestWebKitAPI/Tests/WebKitCocoa/ApplicationManifest.mm:379 >> + EXPECT_FALSE(error); > > NIT: `EXPECT_NULL`? Ah! Will do. >> Tools/TestWebKitAPI/Tests/WebKitCocoa/ApplicationManifest.mm:382 >> + EXPECT_FALSE(error); > > ditto (:379) Ditto.
Brent Fulgham
Comment 6 2021-11-30 10:45:45 PST
Created attachment 445441 [details] Patch for landing
EWS
Comment 7 2021-11-30 11:52:36 PST
Committed r286311 (244670@main): <https://commits.webkit.org/244670@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445441 [details].
Note You need to log in before you can comment on or make changes to this bug.